--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Mechanism for managing state of a game, in which players take turns.",
     "type": "project",
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "mockery/mockery": "1.0.x-dev"
     },
     "authors": [
         {
@@ -13,5 +14,10 @@
     ],
     "require": {
         "jakubgiminski/value-object": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "TurnsGame\\": "TurnsGame"
+        }
     }
 }
